// Copyright 2018 The Chromium Authors. All rights reserved.
// Use of this source code is govered by a BSD-style
// license that can be found in the LICENSE file or at
// https://developers.google.com/open-source/licenses/bsd

syntax = "proto3";

package monorail;

import "api/api_proto/common.proto";
import "api/api_proto/features_objects.proto";

service Features {
  rpc ListHotlistsByUser (ListHotlistsByUserRequest) returns (ListHotlistsByUserResponse) {}
}

message ListHotlistsByUserRequest {
  RequestTrace trace = 1;
  UserRef user = 2;
}

message ListHotlistsByUserResponse {
  repeated Hotlist hotlists = 1;
}
